[package]
name = "gluesql-json-web-storage"
authors = ["TheBrenny <iam@justbrenny.me>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
web_sys_unstable_apis = true

[dependencies]
gluesql-core.workspace = true
utils.workspace = true

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
hex = "0.4"
thiserror = "1.0"
iter-enum = "1"
web-sys = { version = "0.3.65", features = [
    "StorageManager",
    "Window",
    "Navigator",
    "FileSystemDirectoryHandle",
    "DomException",
] }
wasm-bindgen-futures = "0.4.38"

[dev-dependencies]
test-suite.workspace = true
uuid = "1"
